# Checkers_Game_Qt_Cplusplus

./: CMakeLists.txt  Checkers.bat  Checkers.sh  README.md  dockerfile
Checkers/: CMakeLists.txt  active_piece_manager.h  board.cpp  board.h  checkerboard.cpp  checkerboard.h  common.cpp  common.h  coordinates.cpp  coordinates.h  drawer.cpp  drawer.h  game_engine.cpp  game_engine.h  game_window.cpp  game_window.h  logic.cpp  logic.h  piece.cpp  piece.h  player_manager.h  tile.cpp  tile.h
inc/: active_piece_manager.h  checkerboard.h  common.h  coordinates.h  drawer.h  game_engine.h  game_window.h  logic.h  multi_capture_manager.h  piece.h  piece_capture_manager.h  piece_movement_manager.h  piece_promotion_manager.h  pieces_placement.h  player_manager.h  selected_piece_manager.h  starting_coordinates_generator.h  tile.h  tile_manager.h
qml/: AbstractPiece.qml  AbstractTile.qml  BlackPiece.qml  CMakeLists.txt  Checkerboard.qml  Crown.qml  GameArea.qml  Main.qml  NonPlayableTile.qml  Piece.qml  PlayableTile.qml  RedPiece.qml  UiScaler.qml
qml/overlays/: EndGameOverlay.qml
src/: CMakeLists.txt  active_piece_manager.cpp  checkerboard.cpp  checkerboard.h  controller.cpp  controller.h  coordinates.cpp  coordinates.h  coordinates_database.cpp  coordinates_database.h  crown.cpp  crown.h  drawer.cpp  game.cpp  game.h  game_config.cpp  game_config.h  game_coordinator.cpp  game_coordinator.h  game_engine.cpp  game_result.h  game_window.cpp  gui_config.h  input_handler.cpp  log_manager.cpp  logic.cpp  main.cpp  main_window.cpp  main_window.h  model.cpp  model.h  multi_capture_manager.h  overlay_manager.cpp  overlay_manager.h  piece.cpp  piece.h  piece_capture_manager.cpp  piece_capture_manager.h  piece_frontend.cpp  piece_frontend.h  (+23 more)
src/backend/: CMakeLists.txt  coordinates.h  coordinates_database.h  piece.cpp  piece_capture_manager.h  piece_movement_manager.h  piece_promotion_manager.cpp  piece_state_manager.h  player_manager.h  selected_piece_manager.h
src/backend/model/: model.h
src/frontend/: CMakeLists.txt  checkerboard.cpp  checkerboard.h  main_window.cpp  main_window.h  piece_frontend.cpp  piece_frontend.h  tile.h
src/frontend/ui_forms/: main_window.ui
src/model/: model.h  pieces_model.cpp  pieces_model.h
src/piece_managers/: piece_capture_manager.h  piece_movement_manager.h  piece_promotion_manager.h  piece_state_manager.h
src/state_machine/: abstract_state.h  game_state_manager.h  game_state_type.h  i_state_actions.h
src/state_machine/states/: ended_defeat_state.h  ended_victory_north_player.h  ended_victory_player_lower.h  ended_victory_player_upper.h  ended_victory_south_player.h  ended_victory_state.h  escape_menu_state.h  initialization_state.h  ready_to_start_state.h  running_state.h
tests/: CMakeLists.txt
tests/inc/: common_test_fixture.h
tests/src/: capture_test.cpp  common_test_fixture.cpp  common_test_fixture.h  coordinates_generation_test.cpp  movement_test.cpp  object_generation_test.cpp  piece_capture_test.cpp  piece_movement_test.cpp  piece_promotion_test.cpp  promoted_capture_test.cpp  promoted_movement_test.cpp  promoted_piece_capture_test.cpp  promoted_piece_movement_test.cpp  promotion_test.cpp
ui_forms/: game_window.ui
